--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url:jdbc:postgresql://localhost:5432/College
+spring.datasource.url:jdbc:postgresql://railway.internal:5432/railway
 spring.datasource.username:postgres
-spring.datasource.password:postgresql
+spring.datasource.password:zUeEUmbvUWZeUjXjlDpWgHNvKFqgbkLg
 spring.jpa.hibernate.ddl-auto:update
 spring.jpa.show-sql:true
  spring.mvc.format.data=yyyy-MM-dd
